# reclamtrack3.0

./: .editorconfig  .env.example  .gitignore  .prettierignore  ACTION_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_COMPLETE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_INDEX.md  CODE_EXAMINATION_REPORT.md  CODE_HARMONY_GUIDE.md  COMPLAINT_CONTROL_GUIDE.md  CORRECTIONS_BACKEND.md  DEVELOPER_HARMONY_REPORT.md  GMAO_DOCS.md  GRAFANA_GUIDE.md  GUIDE_HARMONISATION.md  HARMONISATION_ROUTES.md  INTEGRATION_COMPLETE.md  INTEGRATION_ROADMAP2.md  IT_ADMINISTRATION_ARCHITECTURE.md  IT_CITIZEN_INTEGRATION.md  IT_MODULE_INTEGRATION_PLAN.md  IT_MODULE_PHASE1_COMPLETE.md  IT_MODULE_PHASE2_COMPLETE.md  IT_MODULE_PHASE3_COMPLETE.md  IT_REACT_HOOKS_GUIDE.md  PERFORMANCE_REPORT.md  QUICK_REFERENCE.md  README.md  README_IT_MODULE.md  SECURITY_MODULE_GUIDE.md  SESSION_COMPLETE_SECURITY.md  SESSION_REPORT_IT_SEC.md  STATUS.md  TEST.ps1  docker-compose.yml  icons.json  outdated-backend.json  package-lock.json  (+4 more)
backend/: .env.example  .eslintrc.json  Dockerfile  build-log.txt  build-output-utf8.txt  build-output.txt  check-db.js  jest.config.cjs  lint-check-utf8.txt  lint-output-utf8.txt  lint-output.txt  lint-results-v3.json  package.json  pyproject.toml  test-login.ts  test-password.js  tsc-errors.txt  tsc-out.txt  tsconfig.json
backend/app/: db.py  logger.py  main.py
backend/scripts/: seed-superadmin.ts
backend/src/: index.ts
backend/tests/: analytics.test.ts  apiResponse.test.ts  auth.test.ts  compliance.test.ts  gmao.test.ts  middleware.test.ts  security.test.ts  staff.test.ts  test_main.py
(+1159 files in other folders)
